--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forest.io</title>
+    <title>Lich.io</title>
     <style>* {
   margin: 0;
   padding: 0;
@@ -33,26 +33,6 @@ div.menu > div {
 </style>
 </head>
 <body>
-
-    <div class="menu">
-        <div>
-            <label for="fps">FPS:</label>
-            <input type="range" min="8" max="60" value="60" id="fps">
-            <span id="fps-value">60</span>
-        </div>
-
-        <div>
-            <label for="latency">Latency Simulation:</label>
-            <input type="range" min="0" max="500" value="0" id="latency">
-            <span id="latency-value">0 ms</span>
-        </div>
-
-        <div>
-            <a href="/" class="button">Back to menu</a>
-        </div>
-    </div>
-
-
 
     <script src="/index.b71e74eb.js" defer=""></script>
 
