--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@ div.menu > div {
 </head>
 <body>
 
-    <script src="/index.b71e74eb.js" defer=""></script>
 
-</body>
+<script src="/client.3464ddca.js"></script></body>
 </html>
