--- a/index.html
+++ b/index.html
@@ -1,39 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lich.io</title>
-    <style>* {
-  margin: 0;
-  padding: 0;
-}
-
-html, body {
-  font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
-}
-
-a {
-  color: red;
-}
-
-input {
-  outline: none;
-}
-
-div.menu {
-  padding: 1em;
-}
-
-div.menu > div {
-  margin-bottom: .1em;
-}
-
-</style>
+    <meta charset="utf-8">
 </head>
 <body>
-
-
-<script src="/client.3464ddca.js"></script></body>
+<script src="/index.b71e74eb.js" defer=""></script></body>
 </html>
