--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-</head>
-<body>
-<script src="/index.b71e74eb.js" defer=""></script></body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"></head><body> <script type="module" src="/index.98b149b0.js"></script></body></html>
