--- a/index.html
+++ b/index.html
@@ -1,41 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramad.io</title>
-    <style>* {
-  margin: 0;
-  padding: 0;
-}
-
-html, body {
-  font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
-}
-
-a {
-  color: red;
-}
-
-input {
-  outline: none;
-}
-
-div.menu {
-  padding: 1em;
-}
-
-div.menu > div {
-  margin-bottom: .1em;
-}
-
-</style>
-</head>
-<body>
-
-    <script src="/index.e137ca72.js" defer=""></script>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Ramad.io</title><style>*{margin:0;padding:0}html,body{font-family:Trebuchet MS,Lucida Sans Unicode,Lucida Grande,Lucida Sans,Arial,sans-serif}a{color:red}input{outline:none}div.menu{padding:1em}div.menu>div{margin-bottom:.1em}</style><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin></script></head><body> <script src="/index.0b955f4e.js" type="module"></script> </body></html>
