--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,12 +31,20 @@ div.menu > div {
   margin-bottom: .1em;
 }
 
+canvas {
+  margin: auto;
+  display: block;
+}
+
 </style>
-        <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous"></script>
 </head>
 <body>
+<!-- BannerAd -->
+<ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-1381879458842068" data-ad-slot="9623602367" data-ad-format="auto" data-full-width-responsive="true"></ins>
+<script>(adsbygoogle = window.adsbygoogle || []).push({});
 
+</script>
     <script src="/index.e137ca72.js" defer=""></script>
-
+    <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous"></script>
 </body>
 </html>
