--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-<!DOCTYPE html><html lang="en"><head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin></script><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Ramad.io</title><style>*{margin:0;padding:0}html,body{font-family:Trebuchet MS,Lucida Sans Unicode,Lucida Grande,Lucida Sans,Arial,sans-serif}a{color:red}input{outline:none}div.menu{padding:1em}div.menu>div{margin-bottom:.1em}canvas{margin:auto;display:block}nav{text-align:center;width:100%;display:block;position:absolute;bottom:10px}nav ul{padding:0;list-style-type:none}.adsbygoogle{float:left;border:3px solid green;display:block;left:auto}</style></head><body>  <ins class="adsbygoogle" data-ad-client="ca-pub-1381879458842068" data-ad-slot="9623602367" data-ad-format="auto" data-full-width-responsive="true"></ins> <script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>  <script src="/index.a00fcf6c.js" type="module"></script> <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin></script> <section> <nav> <ul> <a href="/src/privacy-policy.html">Privacy Policy</a> <a href="/src/about.html">About</a> </ul> </nav> </section></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ramad.io</title>
+    <style>* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
+}
+
+a {
+  color: red;
+}
+
+input {
+  outline: none;
+}
+
+div.menu {
+  padding: 1em;
+}
+
+div.menu > div {
+  margin-bottom: .1em;
+}
+
+canvas {
+  margin: auto;
+  display: block;
+}
+
+nav {
+  text-align: center;
+  width: 100%;
+  display: block;
+  position: absolute;
+  bottom: 10px;
+}
+
+nav ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.adsbygoogle {
+  float: left;
+  display: block;
+  left: auto;
+}
+
+</style>
+        </head>
+        <body>
+            <!-- BannerAd -->
+            <ins class="adsbygoogle" data-ad-client="ca-pub-1381879458842068" data-ad-slot="9623602367" data-ad-format="auto" data-full-width-responsive="true"></ins>
+
+            <script>(adsbygoogle = window.adsbygoogle || []).push({});
+
+</script>
+            <!-------------------------------->
+            
+            <script src="/index.e137ca72.js" defer=""></script>
+            <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous">
+</script>
+            <section>
+                <nav>
+                    <ul>
+                        <a href="/src/privacy-policy.html">Privacy Policy</a>
+                        <a href="/src/about.html">About</a>
+                    </ul>
+                </nav>
+            </section></body>
+        </html>
