--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -1,1 +1,71 @@
-<script src="/privacy-policy.1ddb9e80.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ramad.io</title>
+    <style>* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
+}
+
+a {
+  color: red;
+}
+
+input {
+  outline: none;
+}
+
+div.menu {
+  padding: 1em;
+}
+
+div.menu > div {
+  margin-bottom: .1em;
+}
+
+canvas {
+  margin: auto;
+  display: block;
+}
+
+nav {
+  text-align: center;
+  width: 100%;
+  display: block;
+  position: absolute;
+  bottom: 10px;
+}
+
+nav ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.adsbygoogle {
+  float: left;
+  display: block;
+  left: auto;
+}
+
+</style>
+                    <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous">
+</script>
+        </head>
+        <body>
+            <section>
+                <nav>
+                    <ul>
+                        <a href="/index.html">Return</a>
+                        <a href="/src/about.html">About</a>
+                    </ul>
+                </nav>
+            </section><script src="/privacy-policy.1ddb9e80.js"></script></body>
+        </html>
