--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -6,37 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramad.io</title>
-    <style>* {
-  margin: 0;
-  padding: 0;
-}
-
-html, body {
-  font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
-}
-
-a {
-  color: red;
-}
-
-input {
-  outline: none;
-}
-
-div.menu {
-  padding: 1em;
-}
-
-div.menu > div {
-  margin-bottom: .1em;
-}
-
-canvas {
-  margin: auto;
-  display: block;
-}
-
-nav {
+    <style>nav {
   text-align: center;
   width: 100%;
   display: block;
@@ -47,12 +17,6 @@ nav {
 nav ul {
   padding: 0;
   list-style-type: none;
-}
-
-.adsbygoogle {
-  float: left;
-  display: block;
-  left: auto;
 }
 
 </style>
