real privacy policy

--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@ nav ul {
 }
 
 .adsbygoogle {
+  align-self: left;
   float: left;
+  width: 100px;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: #0ff;
   display: block;
   left: auto;
 }
@@ -58,6 +63,8 @@ nav ul {
 </style>
         </head>
         <body>
+            <section>
+
             <!-- BannerAd -->
             <ins class="adsbygoogle" data-ad-client="ca-pub-1381879458842068" data-ad-slot="9623602367" data-ad-format="auto" data-full-width-responsive="true"></ins>
 
@@ -65,6 +72,7 @@ nav ul {
 
 </script>
             <!-------------------------------->
+        </section>
             
             <script src="/index.e137ca72.js" defer=""></script>
             <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous">
@@ -76,5 +84,6 @@ nav ul {
                         <a href="/src/about.html">About</a>
                     </ul>
                 </nav>
-            </section></body>
-        </html>
+            </section>
+        </body>
+    </html>
