--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@ nav ul {
 }
 
 .adsbygoogle {
-  align-self: left;
   float: left;
-  width: 100px;
+  width: auto;
   height: -moz-fit-content;
   height: fit-content;
   background-color: #0ff;
@@ -63,20 +62,17 @@ nav ul {
 </style>
         </head>
         <body>
-            <section>
 
-            <!-- BannerAd -->
-            <ins class="adsbygoogle" data-ad-client="ca-pub-1381879458842068" data-ad-slot="9623602367" data-ad-format="auto" data-full-width-responsive="true"></ins>
-
-            <script>(adsbygoogle = window.adsbygoogle || []).push({});
+                <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous"></script>
+           <!-- BannerAd -->
+           <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-1381879458842068" data-ad-slot="9623602367" data-ad-format="auto" data-full-width-responsive="true"></ins>
+           <script>(adsbygoogle = window.adsbygoogle || []).push({});
 
 </script>
-            <!-------------------------------->
-        </section>
+
             
-            <script src="/index.e137ca72.js" defer=""></script>
-            <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous">
-</script>
+            <script src="/index.e137ca72.js" defer=""></script>        
+            
             <section>
                 <nav>
                     <ul>
