--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 }
 
 html, body {
+  margin-left: 200px;
+  margin-right: 200px;
   font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
 }
 
@@ -39,6 +41,7 @@ canvas {
 nav {
   text-align: center;
   width: 100%;
+  margin: auto;
   display: block;
   position: absolute;
   bottom: 10px;
@@ -51,12 +54,11 @@ nav ul {
 
 .adsbygoogle {
   float: left;
-  width: auto;
-  height: -moz-fit-content;
-  height: fit-content;
-  background-color: #0ff;
+  width: 100px;
+  height: 100px;
+  border-width: 3px;
+  border-color: red;
   display: block;
-  left: auto;
 }
 
 </style>
@@ -65,7 +67,7 @@ nav ul {
 
                 <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1381879458842068" crossorigin="anonymous"></script>
            <!-- BannerAd -->
-           <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-1381879458842068" data-ad-slot="9623602367" data-ad-format="auto" data-full-width-responsive="true"></ins>
+           <ins class="adsbygoogle" data-ad-client="ca-pub-1381879458842068" data-ad-slot="9623602367" data-ad-format="auto" data-full-width-responsive="true"></ins>
            <script>(adsbygoogle = window.adsbygoogle || []).push({});
 
 </script>
