--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 }
 
 html, body {
-  margin-left: 200px;
-  margin-right: 200px;
+  margin-left: auto;
+  margin-right: auto;
   font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
 }
 
@@ -43,7 +43,6 @@ nav {
   width: 100%;
   margin: auto;
   display: block;
-  position: absolute;
   bottom: 10px;
 }
 
@@ -54,11 +53,16 @@ nav ul {
 
 .adsbygoogle {
   float: left;
-  width: 100px;
-  height: 100px;
+  width: auto;
+  height: auto;
   border-width: 3px;
   border-color: red;
   display: block;
+}
+
+body {
+  height: 1000px;
+  width: 1000px;
 }
 
 </style>
