--- a/index.html
+++ b/index.html
@@ -53,19 +53,18 @@ nav ul {
 
 .adsbygoogle {
   float: left;
-  width: auto;
-  height: auto;
-  border-width: 3px;
-  border-color: red;
+  height: 100%;
+  width: 20%;
+  border: red;
   display: block;
 }
 
 .adsbygoogle2 {
+  size: 100px;
   float: right;
-  width: auto;
-  height: auto;
-  border-width: 3px;
-  border-color: red;
+  height: 100%;
+  width: 20%;
+  border: red;
   display: block;
 }
 
