--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@ body {
 
 </script>
                    <script src="/index.e137ca72.js" defer=""></script> 
-                   <nav>
+                   <footer>
                     <ul>
                         <a href="/src/privacy-policy.html">Privacy Policy</a>
                         <a href="/src/about.html">About</a>
                     </ul>
-                </nav>
+                   </footer>
         </div>
         
 </body>
